--- a/src/app/pages/home/sections/hero-section/hero-section.html
+++ b/src/app/pages/home/sections/hero-section/hero-section.html
@@ -2,7 +2,7 @@
     <div class="container hero-container">
         <div class="hero-content">
             <h1>طريق النجاح في الحصول على رخصة قيادة</h1>
-            <p>مدرب ذوو خبرة، انضم إلى مدرسة صابر بنعمار لتعليم السياقة من الجيل الجديد</p>
+            <p>مدرب ذو خبرة، انضم إلى مدرسة صابر بنعمار لتعليم السياقة من الجيل الجديد</p>
             <div class="hero-buttons">
                 <button (click)="scrollTo('contact')" class="btn btn-primary">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
