--- a/src/app/pages/home/sections/hero-section/hero-section.html
+++ b/src/app/pages/home/sections/hero-section/hero-section.html
@@ -14,7 +14,7 @@
                     </svg>
                     <span>إحجز موعد</span>
                 </button>
-                <button (click)="scrollTo('contact')" class="btn btn-secondary">
+                <a href="tel:+21698257297" class="btn btn-secondary">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path
@@ -22,7 +22,7 @@
                         </path>
                     </svg>
                     <span>اتصل بنا</span>
-                </button>
+                </a>
             </div>
         </div>
         <div class="hero-image">
