--- a/src/app/pages/home/sections/instructors-section/instructors-section.html
+++ b/src/app/pages/home/sections/instructors-section/instructors-section.html
@@ -1,8 +1,8 @@
 <section id="instructors" class="instructors-section">
     <div class="container">
         <div class="section-header">
-            <h2>مدربونا</h2>
-            <p>فريق من المحترفين الشغوفين في خدمتك.</p>
+            <h2>مدربنا</h2>
+            <p>مدرّب معتمد ملتزم بتكوينك وفق أعلى المعايير</p>
             <div class="divider"></div>
         </div>
 
