quelque modification au niveau affichage + ajout champ category

--- a/src/app/pages/home/sections/why-us-section/why-us-section.html
+++ b/src/app/pages/home/sections/why-us-section/why-us-section.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="branding-content fade-in-up">
             <h2 class="branding-title">
-                المدرسة الوحيدة في الجنوب الغربي المختصة في التدريب على رخصة
+                المدرسة الوحيدة لتعليم سياقة الدراجات النارية الكبيرة في قفصة
             </h2>
             <h3 class="branding-subtitle">
                 <span class="highlight">الدراجات الكبرى</span>
