diminuer taille image

--- a/src/app/pages/home/sections/hero-section/hero-section.html
+++ b/src/app/pages/home/sections/hero-section/hero-section.html
@@ -27,7 +27,7 @@
         </div>
         <div class="hero-image">
             <div class="image-wrapper">
-                <img src="assets/auto_ecole_professional_img.png" alt="Auto-école voiture" class="hero-img">
+                <img src="assets/auto_ecole_professional_img.webp" alt="Auto-école voiture" class="hero-img">
             </div>
         </div>
     </div>
